bbh,wf,bob, added missing s4 in star name configs

--- a/QuestPackages/m64/bob/stars/star_4_rc.yml
+++ b/QuestPackages/m64/bob/stars/star_4_rc.yml
@@ -43,65 +43,65 @@ events:
   #e_s4_add_obj_rc_g2:     "run ^objective add o_s4_rc5 ^objective add o_s4_rc6 ^objective add o_s4_rc7 ^objective add o_s4_rc8"
 
   # Red Coins
-  e_hide_rc_1:            "command togglefakeskull %player% bob_rc_1 hide"
-  e_hide_rc_2:            "command togglefakeskull %player% bob_rc_2 hide"
-  e_hide_rc_3:            "command togglefakeskull %player% bob_rc_3 hide"
-  e_hide_rc_4:            "command togglefakeskull %player% bob_rc_4 hide"
-  e_hide_rc_5:            "command togglefakeskull %player% bob_rc_5 hide"
-  e_hide_rc_6:            "command togglefakeskull %player% bob_rc_6 hide"
-  e_hide_rc_7:            "command togglefakeskull %player% bob_rc_7 hide"
-  e_hide_rc_8:            "command togglefakeskull %player% bob_rc_8 hide"
-  e_hide_rc_9:            "command togglefakeskull %player% bob_rc_9 hide"
-  e_hide_rc_10:           "command togglefakeskull %player% bob_rc_10 hide"
-  e_hide_rc_11:           "command togglefakeskull %player% bob_rc_11 hide"
-  e_hide_rc_12:           "command togglefakeskull %player% bob_rc_12 hide"
+  e_s4_hide_rc_1:         "command togglefakeskull %player% bob_rc_1 hide"
+  e_s4_hide_rc_2:         "command togglefakeskull %player% bob_rc_2 hide"
+  e_s4_hide_rc_3:         "command togglefakeskull %player% bob_rc_3 hide"
+  e_s4_hide_rc_4:         "command togglefakeskull %player% bob_rc_4 hide"
+  e_s4_hide_rc_5:         "command togglefakeskull %player% bob_rc_5 hide"
+  e_s4_hide_rc_6:         "command togglefakeskull %player% bob_rc_6 hide"
+  e_s4_hide_rc_7:         "command togglefakeskull %player% bob_rc_7 hide"
+  e_s4_hide_rc_8:         "command togglefakeskull %player% bob_rc_8 hide"
+  e_s4_hide_rc_9:         "command togglefakeskull %player% bob_rc_9 hide"
+  e_s4_hide_rc_10:        "command togglefakeskull %player% bob_rc_10 hide"
+  e_s4_hide_rc_11:        "command togglefakeskull %player% bob_rc_11 hide"
+  e_s4_hide_rc_12:        "command togglefakeskull %player% bob_rc_12 hide"
 
   # Rc1
-  e_s4_got_rc1:           "folder e_s4_add_tag_rc1,e_s4_rc_add_point,core-sfx.e_coin,e_hide_rc_1,e_s4_notify_rc1,if_all_rc_s4"
+  e_s4_got_rc1:           "folder e_s4_add_tag_rc1,e_s4_rc_add_point,core-sfx.e_coin,e_s4_hide_rc_1,e_s4_notify_rc1,if_all_rc_s4"
   e_s4_add_tag_rc1:       "tag add rc1"
   e_s4_notify_rc1:        "notify &3Red coin #1 found! %point.rc_count.amount%/12"
   # Rc2
-  e_s4_got_rc2:           "folder e_s4_add_tag_rc2,e_s4_rc_add_point,core-sfx.e_coin,e_hide_rc_2,e_s4_notify_rc2,if_all_rc_s4"
+  e_s4_got_rc2:           "folder e_s4_add_tag_rc2,e_s4_rc_add_point,core-sfx.e_coin,e_s4_hide_rc_2,e_s4_notify_rc2,if_all_rc_s4"
   e_s4_add_tag_rc2:       "tag add rc2"
   e_s4_notify_rc2:        "notify &3Red coin #2 found! %point.rc_count.amount%/12"
   # Rc3
-  e_s4_got_rc3:           "folder e_s4_add_tag_rc3,e_s4_rc_add_point,core-sfx.e_coin,e_hide_rc_3,e_s4_notify_rc3,if_all_rc_s4"
+  e_s4_got_rc3:           "folder e_s4_add_tag_rc3,e_s4_rc_add_point,core-sfx.e_coin,e_s4_hide_rc_3,e_s4_notify_rc3,if_all_rc_s4"
   e_s4_add_tag_rc3:       "tag add rc3"
   e_s4_notify_rc3:        "notify &3Red coin #3 found! %point.rc_count.amount%/12"
   # Rc4
-  e_s4_got_rc4:           "folder e_s4_add_tag_rc4,e_s4_rc_add_point,core-sfx.e_coin,e_hide_rc_4,e_s4_notify_rc4,if_all_rc_s4"
+  e_s4_got_rc4:           "folder e_s4_add_tag_rc4,e_s4_rc_add_point,core-sfx.e_coin,e_s4_hide_rc_4,e_s4_notify_rc4,if_all_rc_s4"
   e_s4_add_tag_rc4:       "tag add rc4"
   e_s4_notify_rc4:        "notify &3Red coin #4 found! %point.rc_count.amount%/12"
   # Rc5
-  e_s4_got_rc5:           "folder e_s4_add_tag_rc5,e_s4_rc_add_point,core-sfx.e_coin,e_hide_rc_5,e_s4_notify_rc5,if_all_rc_s4"
+  e_s4_got_rc5:           "folder e_s4_add_tag_rc5,e_s4_rc_add_point,core-sfx.e_coin,e_s4_hide_rc_5,e_s4_notify_rc5,if_all_rc_s4"
   e_s4_add_tag_rc5:       "tag add rc5"
   e_s4_notify_rc5:        "notify &3Red coin #5 found! %point.rc_count.amount%/12"
   # Rc6
-  e_s4_got_rc6:           "folder e_s4_add_tag_rc6,e_s4_rc_add_point,core-sfx.e_coin,e_hide_rc_6,e_s4_notify_rc6,if_all_rc_s4"
+  e_s4_got_rc6:           "folder e_s4_add_tag_rc6,e_s4_rc_add_point,core-sfx.e_coin,e_s4_hide_rc_6,e_s4_notify_rc6,if_all_rc_s4"
   e_s4_add_tag_rc6:       "tag add rc6"
   e_s4_notify_rc6:        "notify &3Red coin #6 found! %point.rc_count.amount%/12"
   # Rc7
-  e_s4_got_rc7:           "folder e_s4_add_tag_rc7,e_s4_rc_add_point,core-sfx.e_coin,e_hide_rc_7,e_s4_notify_rc7,if_all_rc_s4"
+  e_s4_got_rc7:           "folder e_s4_add_tag_rc7,e_s4_rc_add_point,core-sfx.e_coin,e_s4_hide_rc_7,e_s4_notify_rc7,if_all_rc_s4"
   e_s4_add_tag_rc7:       "tag add rc7"
   e_s4_notify_rc7:        "notify &3Red coin #7 found! %point.rc_count.amount%/12"
   # Rc8
-  e_s4_got_rc8:           "folder e_s4_add_tag_rc8,e_s4_rc_add_point,core-sfx.e_coin,e_hide_rc_8,e_s4_notify_rc8,if_all_rc_s4"
+  e_s4_got_rc8:           "folder e_s4_add_tag_rc8,e_s4_rc_add_point,core-sfx.e_coin,e_s4_hide_rc_8,e_s4_notify_rc8,if_all_rc_s4"
   e_s4_add_tag_rc8:       "tag add rc8"
   e_s4_notify_rc8:        "notify &3Red coin #8 found! %point.rc_count.amount%/12"
   # Rc9
-  e_s4_got_rc9:           "folder e_s4_add_tag_rc9,e_s4_rc_add_point,core-sfx.e_coin,e_hide_rc_9,e_s4_notify_rc9,if_all_rc_s4"
+  e_s4_got_rc9:           "folder e_s4_add_tag_rc9,e_s4_rc_add_point,core-sfx.e_coin,e_s4_hide_rc_9,e_s4_notify_rc9,if_all_rc_s4"
   e_s4_add_tag_rc9:       "tag add rc9"
   e_s4_notify_rc9:        "notify &3Red coin #9 found! %point.rc_count.amount%/12"
   # Rc10
-  e_s4_got_rc10:          "folder e_s4_add_tag_rc10,e_s4_rc_add_point,core-sfx.e_coin,e_hide_rc_10,e_s4_notify_rc10,if_all_rc_s4"
+  e_s4_got_rc10:          "folder e_s4_add_tag_rc10,e_s4_rc_add_point,core-sfx.e_coin,e_s4_hide_rc_10,e_s4_notify_rc10,if_all_rc_s4"
   e_s4_add_tag_rc10:      "tag add rc10"
   e_s4_notify_rc10:       "notify &3Red coin #10 found! %point.rc_count.amount%/12"
   # Rc11
-  e_s4_got_rc11:          "folder e_s4_add_tag_rc11,e_s4_rc_add_point,core-sfx.e_coin,e_hide_rc_11,e_s4_notify_rc11,if_all_rc_s4"
+  e_s4_got_rc11:          "folder e_s4_add_tag_rc11,e_s4_rc_add_point,core-sfx.e_coin,e_s4_hide_rc_11,e_s4_notify_rc11,if_all_rc_s4"
   e_s4_add_tag_rc11:      "tag add rc11"
   e_s4_notify_rc11:       "notify &3Red coin #11 found! %point.rc_count.amount%/12"
   # Rc12
-  e_s4_got_rc12:          "folder e_s4_add_tag_rc12,e_s4_rc_add_point,core-sfx.e_coin,e_hide_rc_12,e_s4_notify_rc12,if_all_rc_s4"
+  e_s4_got_rc12:          "folder e_s4_add_tag_rc12,e_s4_rc_add_point,core-sfx.e_coin,e_s4_hide_rc_12,e_s4_notify_rc12,if_all_rc_s4"
   e_s4_add_tag_rc12:      "tag add rc12"
   e_s4_notify_rc12:       "notify &3Red coin #12 found! %point.rc_count.amount%/12"
 
